--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,6 @@
 name: Build
 
-on:
-  push:
-    branches:
-      - master
-    tags:
-      - 'v*.*.*'
-    pull_request:
+on: [push]
 
 jobs:
   build_x86:
